# discord-send-embed

./: README.md  pyproject.toml
discord_send_embed/: __init__.py
