[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discord_send_embed"
version = "0.0.1"
authors = [
    { name="Victor Bonnelle", email="victor.bonnelle@proton.me" },
]
description = "Helper for sending embeds with discord.py or its forks"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/victorbnl/discord-send-embed"
"Bug Tracker" = "https://github.com/victorbnl/discord-send-embed/issues"
